// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`to_relative_time_distance snapshot distance 1`] = `
Array [
  25000,
  25000,
  25000,
  "今",
]
`;

exports[`to_relative_time_distance snapshot distance 2`] = `
Array [
  -60000,
  60000,
  60000,
  "%s分後",
]
`;

exports[`to_relative_time_distance snapshot distance 3`] = `
Array [
  -3600000,
  3600000,
  3600000,
  "%s時間後",
]
`;

exports[`to_relative_time_distance snapshot distance 4`] = `
Array [
  -86400000,
  86400000,
  86400000,
  "%s日後",
]
`;

exports[`to_relative_time_distance snapshot distance 5`] = `
Array [
  -604800000,
  604800000,
  604800000,
  "%s週間後",
]
`;

exports[`to_relative_time_distance snapshot distance 6`] = `
Array [
  -2592000000,
  2147483647,
  2592000000,
  "%sヶ月後",
]
`;

exports[`to_relative_time_distance snapshot distance 7`] = `
Array [
  25000,
  25000,
  25000,
  "今",
]
`;

exports[`to_relative_time_distance snapshot distance 8`] = `
Array [
  3600000,
  60000,
  60000,
  "%s分前",
]
`;

exports[`to_relative_time_distance snapshot distance 9`] = `
Array [
  86400000,
  3600000,
  3600000,
  "%s時間前",
]
`;

exports[`to_relative_time_distance snapshot distance 10`] = `
Array [
  604800000,
  86400000,
  86400000,
  "%s日前",
]
`;

exports[`to_relative_time_distance snapshot distance 11`] = `
Array [
  2592000000,
  604800000,
  604800000,
  "%s週間前",
]
`;

exports[`to_relative_time_distance snapshot distance 12`] = `
Array [
  4503599627370495,
  2147483647,
  31556925147,
  "%s年前",
]
`;

exports[`to_relative_time_distance snapshot edge in 52bit 1`] = `
Array [
  -31556925147,
  2147483647,
  31556925147,
  "%s年後",
]
`;

exports[`to_relative_time_distance snapshot edge in 52bit 2`] = `
Array [
  Infinity,
  2147483647,
  4503599627370495,
  "昔",
]
`;

exports[`to_relative_time_distance snapshot edge out 52bit 1`] = `
Array [
  -4503599627370495,
  2147483647,
  31556925147,
  "？？？",
]
`;

exports[`to_relative_time_distance snapshot edge out 52bit 2`] = `
Array [
  -4503599627370495,
  2147483647,
  31556925147,
  "？？？",
]
`;

exports[`to_relative_time_distance snapshot 半 1`] = `"1s"`;

exports[`to_relative_time_distance snapshot 半 2`] = `"1m30s"`;

exports[`to_relative_time_distance snapshot 半 3`] = `"1h30m"`;

exports[`to_relative_time_distance snapshot 半 4`] = `"1d12h"`;

exports[`to_relative_time_distance snapshot 半 5`] = `"1y26w14h54m22s"`;

exports[`to_timer and to_msec value eng 1`] = `"1s"`;

exports[`to_timer and to_msec value eng 2`] = `"1m1s"`;

exports[`to_timer and to_msec value eng 3`] = `"1h1m1s"`;

exports[`to_timer and to_msec value eng 4`] = `"1d1h1m1s"`;

exports[`to_timer and to_msec value eng 5`] = `"1w1d1h1m1s"`;

exports[`to_timer and to_msec value eng 6`] = `"1y1w1d1h1m1s"`;

exports[`to_timer and to_msec value jpn 1`] = `"1秒"`;

exports[`to_timer and to_msec value jpn 2`] = `"1分1秒"`;

exports[`to_timer and to_msec value jpn 3`] = `"1時1分1秒"`;

exports[`to_timer and to_msec value jpn 4`] = `"1日1時1分1秒"`;

exports[`to_timer and to_msec value jpn 5`] = `"1週1日1時1分1秒"`;

exports[`to_timer and to_msec value jpn 6`] = `"1年1週1日1時1分1秒"`;

exports[`to_timer and to_msec value jpn 7`] = `"52週1日5時48分45秒"`;
